List data working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,5 @@
 <app-navbar></app-navbar>
 <br/>
-
 <div class="container-fluid">
-  <div class="row">
-      <div class="col">
-          <app-customers></app-customers>      
-      </div>
-      <div class="col">
-        <app-cards></app-cards>
-      </div>
-      <div class="col">
-          <app-transactions></app-transactions>
-      </div>
-  </div>  
+    <router-outlet></router-outlet>
 </div>
-
-<h2><router-outlet></router-outlet> </h2>
