--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="/page1">Page 1 <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="/customers"  routerLinkActive="active">Clientes <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="/adviser"  routerLinkActive="active">Asesores <span class="sr-only">(current)</span></a>
     </div>
   </div>
 </nav>
