--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,5 +1,5 @@
 <div class="card border-secondary mb-3 hand" style="width: 18rem;" 
-(click)="select()" [ngClass]="selected ? 'bg-info' : ''">
+(click)="select()">
   <div class="card-body">
     <h5 class="card-title">{{data.fullName}}</h5>    
     <p class="card-text">      
